Refactor deploy workflow to use PowerShell commands

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,32 @@
-name: Deploy
+# 1) Allow scripts for *this* PowerShell session only
+- name: Allow PowerShell scripts in this session
+  shell: powershell
+  run: |
+    Set-ExecutionPolicy -Scope Process -ExecutionPolicy RemoteSigned -Force
+    Write-Host "ExecutionPolicy (effective): $(Get-ExecutionPolicy)"
 
-on:
-  push:
-    branches: [ "main" ]
+# 2) Configure kubeconfig using PowerShell-native commands
+- name: Configure kubeconfig (PowerShell)
+  shell: powershell
+  env:
+    KUBECONFIG_B64: ${{ secrets.KUBECONFIG_B64 }}
+  run: |
+    # mkdir -p equivalent in PowerShell
+    $null = New-Item -ItemType Directory -Path "$HOME\.kube" -Force
 
-jobs:
-  deploy:
-    runs-on: self-hosted
+    # If a base64 kubeconfig secret is provided, decode to file
+    if ($env:KUBECONFIG_B64) {
+      [IO.File]::WriteAllBytes(
+        "$HOME\.kube\config",
+        [Convert]::FromBase64String($env:KUBECONFIG_B64)
+      )
+    } else {
+      Write-Host "KUBECONFIG_B64 empty - using existing $HOME\.kube\config if present"
+    }
 
-    steps:
-      # -------------------------------
-      # 1. Add your one‑time prelude step HERE
-      # -------------------------------
-      - name: Allow PowerShell scripts in this session
-        shell: powershell
-        run: |
-          Set-ExecutionPolicy -Scope Process -ExecutionPolicy RemoteSigned -Force
-          $policy = Get-ExecutionPolicy -List | Out-String
-          Write-Host "Effective execution policies:`n$policy"
-
-      # -------------------------------
-      # 2. Checkout repo (required)
-      # -------------------------------
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      # -------------------------------
-      # 3. Your actual PowerShell commands
-      # -------------------------------
-      - name: Run deployment script
-        shell: powershell
-        run: ./deploy.ps1
-``
+# 3) Sanity check connectivity
+- name: Check cluster
+  shell: powershell
+  run: |
+    kubectl version --client
+    kubectl cluster-info
